--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,7 @@ foreach(item IN LISTS TEST_SRC)
     get_filename_component(SRCNAME ${item} NAME_WE) #得到文件的名字，不带扩展名
     add_executable(${SRCNAME} ${item} ${SRC})
     target_link_libraries(${SRCNAME} doctest_with_main)
-    target_include_directories(${SRCNAME} PUBLIC ${PROJECT_TOP_DIR}/src)
+    target_include_directories(${SRCNAME} PUBLIC ${PROJECT_TOP_DIR}/src ${PROJECT_TOP_DIR}/FastMath)
     add_test(
             NAME ${SRCNAME}
             COMMAND $<TARGET_FILE:${SRCNAME}>
